--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,11 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/node": "^22.8.1",
+    "@types/react": "^18.3.12",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.6.3"
   }
 }
